--- a/servicos/templates/base.html
+++ b/servicos/templates/base.html
@@ -18,11 +18,18 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
                 <a class="nav-link" href="#">About</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" href="{{url_for('verifyCreate')}}">New Post</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{{url_for('create')}}">New Post</a>
+                <a class="nav-link"  href="{{url_for('login')}}">Login</a>
+                <!-- <a class="nav-link"  href="{{url_for('logout')}}">Logout</a> -->
+            </li>
+            <li class="nav-item">
+                <a class="nav-link"  href="{{url_for('signup')}}">Sign Up</a>
             </li>
             </ul>
         </div>
