integrar funcionalidade visualizar e editar posts

--- a/servicos/templates/post.html
+++ b/servicos/templates/post.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
+    <a href="{{ url_for('edit', id=post['id']) }}">Edit</a>
     <h2>{% block title %} {{ post['title'] }} {% endblock %}</h2>
     <span class="badge badge-primary">{{ post['created'] }}</span>
     <p>{{ post['content'] }}</p>
