--- a/servicos/templates/index.html
+++ b/servicos/templates/index.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>{% block title %} Welcome to FlaskBlog {% endblock %}</h1>
     {% for post in posts %}
-        <a href="#">
+        <a href="{{ url_for('post', post_id=post['id']) }}">
             <h2>{{ post['title'] }}</h2>
         </a>
         <span class="badge badge-primary">{{ post['created'] }}</span>
@@ -11,10 +11,10 @@
     {% endfor %}
 {% endblock %}
 
-{% for post in posts %}
+<!-- {% for post in posts %}
     <a href="{{ url_for('post', post_id=post['id']) }}">
         <h2>{{ post['title'] }}</h2>
     </a>
     <span class="badge badge-primary">{{ post['created'] }}</span>
     <hr>
-{% endfor %}
+{% endfor %} -->
